<?xml version="1.0"?>
<package format="2">
  <name>hauv_udp_comm</name>
  <version>0.0.0</version>
  <description>The hauv_udp_comm package</description>

  <maintainer email="chungdongha@kaist.ac.kr">wakanda</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
